# TCMHAP

./: .gitignore  README.md  complete_skin_analyzer(api).py  complete_skin_analyzer.py  complete_skin_analyzer_test.py  complete_skin_analyzer_test2_api.py  export_excel.py  pyproject.toml  requirements.txt  run.py  start.py
app/: __init__.py  chart.py  config.py  db.py  debug_app.py  models.py
app/data/: face_map.md
app/models/: face_analysis_model.py  user_model.py  users_model.py  verifycode_model.py
app/routes/: diagnosis_mapping_route.py  export_routes.py  face_analysis_routes.py  history_route.py  hologram_routes.py  ollama_routes.py  rag_routes.py  user_routes.py
app/services/: FaceProject.py  complete_skin_analyzer_nodiag_api.py  complete_skin_analyzer_test2_api.py  export_service.py  facialskincoloranalysis_service.py  history_service.py  hologram_service.py  ingest.py  login_service.py  mole_detection_service.py  query_rag.py  rag_core.py  rag_service.py  region_advice_service.py  register_user_service.py  user_profile_service.py  user_service.py
app/services/QueryRag/: config.py  convert_encoding.py  ingest.py  query.py  rag_core.py  server.py
app/services/QueryRag/data/: face_map.md
app/services/QueryRag/db/: chroma.sqlite3
app/utils/: mail_util.py
