[tool.poetry]
name = "TEST"
version = "0.1.0"
description = "範例專案，只用來安裝相依套件，不需要打包成 library"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
pydantic = "^1.10.22"
flask = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
