[tool.poetry]
name = "TCMHAP"
version = "0.1.0"
description = "畢業專題-中醫健康分析後端(Python程式)"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.1.1"
opencv-python = "^4.11.0.86"
numpy = "1.26.4"
insightface = "0.7.3"
mediapipe = "0.10.9"
onnxruntime = "^1.22.1"
torch = "^2.7.1"
flask-cors = "^6.0.1"
sqlalchemy = "^2.0.42"
werkzeug       = ">=2.0.0"
pymysql        = "1.1.1"
python-dotenv = "^1.0.1"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
the-new-hotness = "^1.3.0"
utils = "^1.0.2"
utils-config = "^1.0.0"
httpx = "^0.28.1"
chromadb = "^1.0.20"

# 依 pip list 補齊（精準版本）
absl-py = "2.3.1"
albucore = "0.0.24"
albumentations = "2.0.8"
anitya_schema = "2.3.0"
annotated-types = "0.7.0"
anyio = "4.10.0"
attrs = "25.3.0"
Automat = "25.4.16"
backoff = "2.2.1"
bcrypt = "4.3.0"
black = "23.12.1"
blinker = "1.9.0"
build = "1.3.0"
cachetools = "5.5.2"
cffi = "1.17.1"
charset-normalizer = "3.4.3"
click = "8.2.1"
colorama = "0.4.6"
coloredlogs = "15.0.1"
constantly = "23.10.4"
contourpy = "1.3.2"
crochet = "2.1.1"
cryptography = "45.0.7"
cycler = "0.12.1"
Cython = "3.1.3"
decorator = "5.2.1"
defusedxml = "0.7.1"
distro = "1.9.0"
durationpy = "0.10"
easydict = "1.13"
et_xmlfile = "2.0.0"
fedora_messaging = "3.8.0"
"fedora-messaging-the-new-hotness-schema" = "1.2.1"
filelock = "3.19.1"
flatbuffers = "25.2.10"
fonttools = "4.59.2"
fsspec = "2025.7.0"
google-auth = "2.40.3"
googleapis-common-protos = "1.70.0"
greenlet = "3.2.4"
grpcio = "1.74.0"
gssapi = "1.9.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.6.4"
huggingface-hub = "0.34.4"
humanfriendly = "10.0"
hyperlink = "21.0.0"
idna = "3.10"
imageio = "2.37.0"
importlib_metadata = "8.7.0"
importlib_resources = "6.5.2"
incremental = "24.7.2"
iniconfig = "2.1.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
joblib = "1.5.2"
jsonschema = "4.25.1"
jsonschema-specifications = "2025.4.1"
kiwisolver = "1.4.9"
koji = "1.35.3"
kubernetes = "33.1.0"
lazy_loader = "0.4"
"markdown-it-py" = "4.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.10.6"
mdurl = "0.1.2"
mmh3 = "5.2.0"
mpmath = "1.3.0"
mypy = "1.17.1"
mypy_extensions = "1.1.0"
networkx = "3.4.2"
oauthlib = "3.3.1"
onnx = "1.17.0"
"opencv-contrib-python" = "4.11.0.86"
orjson = "3.11.3"
overrides = "7.7.0"
packaging = "25.0"
pika = "1.3.2"
pillow = "11.3.0"
platformdirs = "4.4.0"
pluggy = "1.6.0"
posthog = "5.4.0"
prettytable = "3.16.0"
protobuf = "3.20.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pybase64 = "1.4.2"
pycparser = "2.22"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
pydantic-settings = "2.10.1"
Pygments = "2.19.2"
PyJWT = "2.10.1"
pyOpenSSL = "25.1.0"
pyparsing = "3.2.3"
PyPika = "0.48.9"
pyproject_hooks = "1.2.0"
pyreadline3 = "3.5.4"
pytest = "7.4.4"
python-bugzilla = "3.3.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
PyYAML = "6.0.2"
redis = "5.3.1"
referencing = "0.36.2"
requests = "2.32.5"
requests-gssapi = "1.3.0"
requests-oauthlib = "2.0.0"
rich = "14.1.0"
rpds-py = "0.27.1"
rsa = "4.9.1"
scikit-image = "0.25.2"
scikit-learn = "1.7.1"
scipy = "1.15.3"
service-identity = "24.2.0"
shellingham = "1.5.4"
simsimd = "6.5.1"
six = "1.17.0"
sniffio = "1.3.1"
sounddevice = "0.5.2"
stringzilla = "3.12.6"
sympy = "1.14.0"
tenacity = "9.1.2"
threadpoolctl = "3.6.0"
tifffile = "2025.5.10"
tokenizers = "0.22.0"
tomli = "2.2.1"
tqdm = "4.67.1"
Twisted = "25.5.0"
typer = "0.17.3"
typing_extensions = "4.15.0"
typing-inspection = "0.4.1"
tzdata = "2025.2"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
watchfiles = "1.1.0"
wcwidth = "0.2.13"
websocket-client = "1.8.0"
websockets = "15.0.1"
wrapt = "1.17.3"
zipp = "3.23.0"
"zope.interface" = "7.2"

# OpenTelemetry（注意含一個 beta 版號）
"opentelemetry-api" = "1.36.0"
"opentelemetry-exporter-otlp-proto-grpc" = "1.15.0"
"opentelemetry-proto" = "1.15.0"
"opentelemetry-sdk" = "1.36.0"
"opentelemetry-semantic-conventions" = "0.57b0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
